[tool.poetry]
name = "simuleeuropeancalloption"
version = "0.1.0"
description = ""
authors = ["sarrrrry <sarrrrry.sarrrrry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
